samples/_failures_safe/1761670266_8a4e5a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dc31632b.c: In function ‘main’:
./samples/SAFE/__tmp_dc31632b.c:160:9: error: expected declaration or statement at end of input
  160 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_dc31632b.c:160:9: error: expected declaration or statement at end of input
